html and css are prectic project

--- a/Milestone-01/Module-03/index.html
+++ b/Milestone-01/Module-03/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web site</title>
+    <title>Html/CSS</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="asset/20827047_6375848.jpg" type="image/x-icon">
 </head>
 <body>
     <div class="heading">
         <h1>I am a new programer</h1>
+        <div class="btn-box">
+            <button class="btn" >Hire Me Now</button>
+        </div>
     </div>
 </body>
 </html>
