--- a/Milestone-01/Module-03/index.html
+++ b/Milestone-01/Module-03/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <div class="heading">
-        <h1>I am a new programer</h1>
+        <div class="font">
+            <h1>I am a new programer</h1>
+        </div>
         <div class="btn-box">
             <button class="btn" >Hire Me Now</button>
         </div>
-    </div>
+    </div>  
 </body>
 </html>
